--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=Interhack.Api
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/interhack
+spring.datasource.username=postgres
+spring.datasource.password=MyDB_password
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
