--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,15 @@
 			<version>3.2.0</version>
 		</dependency>
 		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>0.12.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>io.github.encryptorcode</groupId>
 			<artifactId>pluralize</artifactId>
 			<version>1.0.0</version>
