--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=Interhack.Api
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/interhack
-spring.datasource.username=postgres
-spring.datasource.password=MyDB_password
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:mysql://localhost:3306/interhack
+spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+app.jwt-secret=claveultrasecreta123456789asdfghjkllqwertyuioxcvbnmz
+app.jwt-expiration-min=43200
+server.port=8085
